Переделана инициализация игровой доски (сетки). Добавлена проверка на выигрышную комбинацию.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,13 +7,13 @@
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
+  Главная страница приложения
   <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
+    Игра "Крестики-нолики"
   </p>
 
   <button ion-button block (click)="goSinglePlayerPage()">
-    goSinglePlayerPage
+    Один игрок
   </button>
 
 </ion-content>
