--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,7 +12,7 @@
   <div id="content-header">
     <div style="height: 35%;"></div>
     <div style="height: 35%;"></div>
-    <div style="height: 30%; text-align: center;">
+    <div style="height: 30%; text-align: center;" id="status_game">
       <p>Начните играть!</p>
     </div>
   </div>
