--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,7 +11,18 @@
 
   <div id="content-header">
     <div style="height: 35%;"></div>
-    <div style="height: 35%;"></div>
+    <div style="height: 35%;">
+      <div style="height: 100%; width: 100%; display: table;">
+        <div style="display: table-row;">
+          <div class="col-6 scoreboard" id="gamerX">
+            X
+          </div>
+          <div class="col-6 scoreboard" id="gamerO">
+            O
+          </div>
+        </div>
+      </div>
+    </div>
     <div style="height: 30%; text-align: center;" id="status_game">
       <p>Начните играть!</p>
     </div>
@@ -26,8 +37,8 @@
     </div>
   </div>
 
-  <div id="content-footer">
-    <button ion-button block (click)="initialGameBoard()">Начать заного</button>
+  <div id="content-footer" style="padding: 10% 0">
+      <button ion-button block (click)="initialGameBoard()">Начать заново</button>
   </div>
 
 </ion-content>
